--- a/index.html
+++ b/index.html
@@ -18,40 +18,40 @@
         <div class="green"></div>
         <div class="green"></div>
         <div class="red"></div>
-        <div class="letters">ج</div>
-        <div class="letters">ت</div>
+        <div class="letters"></div>
+        <div class="letters"></div>
         <div class="red"></div>
-        <div class="letters">أ</div>
-        <div class="letters">ث</div>
-        <div class="letters">ب</div>
+        <div class="letters"></div>
+        <div class="letters"></div>
+        <div class="letters"></div>
         <div class="red"></div>
-        <div class="letters">ر</div>
-        <div class="letters">د</div>
+        <div class="letters"></div>
+        <div class="letters"></div>
         <div class="red"></div>
-        <div class="letters">ح</div>
-        <div class="letters">ذ</div>
-        <div class="letters">خ</div>
+        <div class="letters"></div>
+        <div class="letters"></div>
+        <div class="letters"></div>
         <div class="red"></div>
-        <div class="letters">ض</div>
-        <div class="letters">ش</div>
+        <div class="letters"></div>
+        <div class="letters"></div>
         <div class="red"></div>
-        <div class="letters">ز</div>
-        <div class="letters">ص</div>
-        <div class="letters">س</div>
+        <div class="letters"></div>
+        <div class="letters"></div>
+        <div class="letters"></div>
         <div class="red"></div>
-        <div class="letters">ف</div>
-        <div class="letters">ع</div>
+        <div class="letters"></div>
+        <div class="letters"></div>
         <div class="red"></div>
-        <div class="letters">ط</div>
-        <div class="letters">غ</div>
-        <div class="letters">ظ</div>
+        <div class="letters"></div>
+        <div class="letters"></div>
+        <div class="letters"></div>
         <div class="red"></div>
-        <div class="letters">ن</div>
-        <div class="letters">ل</div>
+        <div class="letters"></div>
+        <div class="letters"></div>
         <div class="red"></div>
-        <div class="letters">ق</div>
-        <div class="letters">م</div>
-        <div class="letters">ك</div>
+        <div class="letters"></div>
+        <div class="letters"></div>
+        <div class="letters"></div>
         <div class="red"></div>
         <div class="green"></div>
         <div class="green"></div>
